Add Available Countries API
